# sql

./: .gitignore
client_manager/: .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.cpp
client_manager/example/: example.cpp
client_manager/include/: client_manager.hpp  env_loader.hpp
client_manager/src/: client_manager.cpp  env_loader.cpp
cpp_orm/: docker-compose.yaml
cpp_orm/task_1/: CMakeLists.txt  orm.hpp
cpp_orm/task_2/: .env  CMakeLists.txt  docker-compose.yaml
cpp_orm/task_2/src/: main.cpp  orm.hpp
cpp_orm/task_2_qt/: CMakeLists.txt  main.cpp
create_db/task_1/: .env  README.md  docker-compose.yaml  init.sql
create_db/task_2/: .env  README.md  docker-compose.yml  init.sql
create_music_db/: docker_compose.yaml  init.sql
data_selection/task_1/: README.md
data_selection/task_2/: README.md  init.sql  queries.sql
data_selection/task_3/: README.md  init.sql  queries.sql
data_selection/task_4/: README.md  init.sql  queries.sql
postgresql_from_cpp/: CMakeLists.txt
